feat: 작업 없이 일정을 생성할 때 의존 관계 설정을 금지하는 로직 추가